--- a/index.html
+++ b/index.html
@@ -3,286 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yen vs Dollar: Currency Dynamics</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #121212;
-            --secondary-color: #666;
-            --accent-color: #4e83b3;
-            --background-color: #ffffff;
-            --text-color: #333;
-            --chart-color: #4e83b3;
-            --chart-highlight: #e63946;
-        }
-        body {
-            font-family: 'Source Sans Pro', sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: var(--background-color);
-        }
-        h1, h2, h3 {
-            font-family: 'Playfair Display', serif;
-            color: var(--primary-color);
-            letter-spacing: -0.5px;
-        }
-        h1 {
-            font-size: 3em;
-            text-align: center;
-            margin-bottom: 30px;
-            border-bottom: 1px solid var(--secondary-color);
-            padding-bottom: 20px;
-        }
-        h2 {
-            font-size: 2em;
-            margin-top: 40px;
-        }
-        h3 {
-            font-size: 1.5em;
-            color: var(--secondary-color);
-        }
-        p {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-        .chart-container {
-            width: 100%;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #f9f9f9;
-            border: 1px solid #e1e1e1;
-        }
-        .chart {
-            display: flex;
-            align-items: flex-end;
-            height: 400px;
-            border-bottom: 2px solid var(--secondary-color);
-            border-left: 2px solid var(--secondary-color);
-            padding-top: 20px;
-            position: relative;
-        }
-        .bar {
-            flex: 1;
-            margin: 0 1px;
-            background-color: var(--chart-color);
-            transition: height 0.5s ease;
-            position: relative;
-        }
-        .bar:hover {
-            background-color: var(--chart-highlight);
-        }
-        .bar::before {
-            content: attr(data-value);
-            position: absolute;
-            top: -25px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 14px;
-            color: var(--secondary-color);
-        }
-        .x-axis {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 10px;
-        }
-        .x-axis span {
-            font-size: 14px;
-            color: var(--secondary-color);
-            transform: rotate(-45deg);
-            margin-top: 10px;
-        }
-        .trend-line {
-            position: absolute;
-            width: 100%;
-            height: 2px;
-            background-color: var(--chart-highlight);
-            top: 50%;
-            transform: translateY(-50%);
-        }
-        .factors-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 40px;
-        }
-        .factor-card {
-            background-color: #f9f9f9;
-            border: 1px solid #e1e1e1;
-            padding: 20px;
-            transition: box-shadow 0.3s ease;
-        }
-        .factor-card:hover {
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        }
-        .factor-card h3 {
-            margin-top: 0;
-            color: var(--accent-color);
-        }
-        .timeline {
-            position: relative;
-            max-width: 800px;
-            margin: 40px auto;
-            padding-top: 20px;
-        }
-        .timeline::after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 2px;
-            background-color: var(--secondary-color);
-            top: 0;
-            left: 0;
-        }
-        .event {
-            position: relative;
-            margin-bottom: 30px;
-            padding-top: 20px;
-        }
-        .event::before {
-            content: '';
-            position: absolute;
-            width: 12px;
-            height: 12px;
-            background-color: var(--accent-color);
-            border-radius: 50%;
-            top: -6px;
-            left: 0;
-        }
-        .event-content {
-            margin-left: 20px;
-        }
-        .event h3 {
-            margin: 0;
-            color: var(--accent-color);
-        }
-    </style>
+    <title>AI Code Challenge</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Yen vs Dollar: Currency Dynamics</h1>
-    
-    <p>The Japanese Yen has generally been weaker than the US Dollar in recent years. This analysis explores the key factors behind this trend and provides historical context for understanding currency dynamics between these two major economies.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="puzzle.html">Today's Puzzle</a></li>
+                <li><a href="learning-hub.html">AI Learning Hub</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <div class="chart-container">
-        <h2>JPY per 1 USD (2014-2024)</h2>
-        <div class="chart" id="exchangeRateChart">
-            <div class="trend-line"></div>
-        </div>
-        <div class="x-axis" id="chartXAxis"></div>
-    </div>
+    <main>
+        <h1>Welcome to AI Code Challenge</h1>
+        <p>Enhance your AI knowledge and coding skills with daily challenges!</p>
+        
+        <section id="featured-puzzle">
+            <h2>Today's Challenge</h2>
+            <p>Neural Network Basics: Complete the code for a simple perceptron</p>
+            <a href="puzzle.html" class="button">Start Puzzle</a>
+        </section>
 
-    <h2>Key Factors Influencing Yen Weakness</h2>
+        <section id="progress">
+            <h2>Your Progress</h2>
+            <p>Puzzles solved: <span id="puzzles-solved">0</span>/10</p>
+            <p>AI Knowledge Points: <span id="knowledge-points">0</span></p>
+        </section>
+    </main>
 
-    <div class="factors-grid">
-        <div class="factor-card">
-            <h3>Monetary Policy Divergence</h3>
-            <p>Bank of Japan: Ultra-low rates<br>US Federal Reserve: Rate hikes</p>
-        </div>
-        <div class="factor-card">
-            <h3>Economic Growth</h3>
-            <p>US: Stronger growth<br>Japan: Sluggish growth</p>
-        </div>
-        <div class="factor-card">
-            <h3>Inflation Rates</h3>
-            <p>Japan: Deflation/low inflation<br>US: Higher inflation</p>
-        </div>
-        <div class="factor-card">
-            <h3>Trade Balance</h3>
-            <p>Japan: Increased energy imports<br>US: Improving trade balance</p>
-        </div>
-        <div class="factor-card">
-            <h3>Safe-Haven Status</h3>
-            <p>Dollar: Primary reserve currency<br>Yen: Secondary safe-haven</p>
-        </div>
-    </div>
+    <footer>
+        <p>&copy; 2024 AI Code Challenge. All rights reserved.</p>
+    </footer>
 
-    <h2>Historical Context: Yen-Dollar Exchange Rate Timeline</h2>
-
-    <div class="timeline">
-        <div class="event">
-            <div class="event-content">
-                <h3>1971</h3>
-                <p>End of Bretton Woods system. Yen begins to float against the Dollar.</p>
-            </div>
-        </div>
-        <div class="event">
-            <div class="event-content">
-                <h3>1985</h3>
-                <p>Plaza Accord leads to Yen appreciation against the Dollar.</p>
-            </div>
-        </div>
-        <div class="event">
-            <div class="event-content">
-                <h3>1995</h3>
-                <p>Yen reaches post-war high of 79.75 per Dollar.</p>
-            </div>
-        </div>
-        <div class="event">
-            <div class="event-content">
-                <h3>2002</h3>
-                <p>Japan's "Lost Decade" continues, keeping Yen weak.</p>
-            </div>
-        </div>
-        <div class="event">
-            <div class="event-content">
-                <h3>2011</h3>
-                <p>Fukushima disaster leads to Yen appreciation due to repatriation flows.</p>
-            </div>
-        </div>
-        <div class="event">
-            <div class="event-content">
-                <h3>2012</h3>
-                <p>Shinzo Abe elected, introduces "Abenomics" leading to Yen depreciation.</p>
-            </div>
-        </div>
-        <div class="event">
-            <div class="event-content">
-                <h3>2020-2024</h3>
-                <p>COVID-19 pandemic and recovery. Diverging monetary policies lead to further Yen weakness.</p>
-            </div>
-        </div>
-    </div>
-
-    <h2>Conclusion</h2>
-    <p>The Yen's weakness against the Dollar stems from a complex interplay of economic factors and policy decisions. While short-term fluctuations occur, the long-term trend reflects diverging monetary policies, economic growth patterns, and global events. This analysis provides insights into the Yen-Dollar dynamic and broader principles of currency valuation in international economics.</p>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const data = [
-                {year: '2014', rate: 105.85},
-                {year: '2015', rate: 121.05},
-                {year: '2016', rate: 116.96},
-                {year: '2017', rate: 112.14},
-                {year: '2018', rate: 110.42},
-                {year: '2019', rate: 109.01},
-                {year: '2020', rate: 106.78},
-                {year: '2021', rate: 109.83},
-                {year: '2022', rate: 131.13},
-                {year: '2023', rate: 141.67},
-                {year: '2024', rate: 150.00}
-            ];
-
-            const chart = document.getElementById('exchangeRateChart');
-            const xAxis = document.getElementById('chartXAxis');
-
-            const maxRate = Math.max(...data.map(d => d.rate));
-            const minRate = Math.min(...data.map(d => d.rate));
-
-            data.forEach((item, index) => {
-                const bar = document.createElement('div');
-                bar.className = 'bar';
-                const height = ((item.rate - minRate) / (maxRate - minRate)) * 100;
-                bar.style.height = `${height}%`;
-                bar.setAttribute('data-value', item.rate.toFixed(2));
-                chart.appendChild(bar);
-
-                const label = document.createElement('span');
-                label.textContent = item.year;
-                xAxis.appendChild(label);
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
