--- a/marble/index.html
+++ b/marble/index.html
@@ -3,29 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marble Minima 3D</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <title>Saddle Point Simulation</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+            background-color: #f0f0f0;
+            color: #333;
+            line-height: 1.6;
+        }
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 20px;
+        }
+        #game-area {
+            width: 800px;
+            height: 600px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            overflow: hidden;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        #game-canvas {
+            width: 100%;
+            height: 100%;
+        }
+        #reset-button {
+            font-size: 1.2em;
+            padding: 10px 25px;
+            margin-bottom: 20px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        #reset-button:hover {
+            background-color: #2980b9;
+        }
+        .panel {
+            width: 760px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        #info-panel {
+            background-color: #e8f4f8;
+            border-left: 5px solid #3498db;
+        }
+        #explanation {
+            background-color: #f9f9f9;
+        }
+        h2 {
+            color: #2c3e50;
+            margin-top: 0;
+        }
+        p {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div id="game-container">
-        <h1>Marble Minima 3D</h1>
-        <div id="game-area">
-            <canvas id="game-canvas"></canvas>
-        </div>
-        <div id="controls">
-            <button id="start-button">Start Game</button>
-            <button id="next-button" style="display: none;">Next Puzzle</button>
-        </div>
-        <div id="info-panel">
-            <p>Level: <span id="level">1</span></p>
-            <p>Score: <span id="score">0</span></p>
-        </div>
-        <div id="explanation">
-            <h2>How to Play</h2>
-            <p>Guide the marble to the global minimum (blue area). Use arrow keys to apply small forces to the marble.</p>
-            <p>Avoid getting stuck in local minima (red areas) or on saddle points!</p>
-        </div>
+    <h1>Saddle Point Simulation</h1>
+    <div id="game-area">
+        <canvas id="game-canvas"></canvas>
+    </div>
+    <button id="reset-button">Reset Simulation</button>
+    <div id="info-panel" class="panel">
+        <h2>How to Use</h2>
+        <p>Hover over the surface to preview marble placement. Click to start the simulation.</p>
+    </div>
+    <div id="explanation" class="panel">
+        <h2>Saddle Points and Local Minima in Optimization</h2>
+        <p>A saddle point is a point on a surface where the slope is zero in all directions, but it's not a local maximum or minimum. In optimization, saddle points can pose challenges as they can appear to be solutions but are not optimal.</p>
+        <p>This simulation demonstrates how an object (the marble) moves on a saddle surface, potentially getting stuck in local minima. In optimization algorithms, this is analogous to how certain methods might converge to suboptimal solutions.</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
