--- a/index.html
+++ b/index.html
@@ -4,89 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Generated Apps</title>
-    <style>
-        body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f0f5f9;
-            color: #2c3e50;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            max-width: 1200px;
-        }
-        .game-box {
-            background-color: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            padding: 2rem;
-            width: 300px;
-            text-align: center;
-        }
-        h2 {
-            font-size: 1.8rem;
-            margin-bottom: 1rem;
-            color: #3498db;
-        }
-        p {
-            font-size: 1rem;
-            line-height: 1.5;
-            margin-bottom: 1.5rem;
-        }
-        .play-button {
-            display: inline-block;
-            background-color: #2ecc71;
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            border-radius: 25px;
-            font-size: 1rem;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-        }
-        .play-button:hover {
-            background-color: #27ae60;
-            transform: translateY(-2px);
-        }
-        .floating-shapes {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            z-index: -1;
-        }
-    .shape {
-        position: absolute;
-        font-size: 80px;
-        opacity: 0; /* Start fully transparent */
-        animation: meteor 10s linear infinite;
-        --translate-x: 0px;
-        --translate-y: 0px;
-        --rotation: 0deg;
-        animation-delay: var(--delay, 0s);
-    }
-    @keyframes meteor {
-        0% {
-            transform: translate(0, 0) rotate(0deg);
-            opacity: 0; /* Start transparent */
-        }
-        10% {
-            opacity: 0.8; /* Fade in quickly */
-        }
-        100% {
-            transform: translate(var(--translate-x), var(--translate-y)) rotate(var(--rotation));
-            opacity: 0; /* Fade out at the end */
-        }
-    }
-    </style>
+    <link rel="stylesheet" href="main-styles.css"> <!-- Link to external CSS -->
 </head>
 <body>
     <div class="floating-shapes">
@@ -96,47 +14,49 @@
         <span class="shape" style="left: 40%; top: 40%; --translate-x: -700px; --translate-y: -500px; --rotation: -720deg; --delay: 6s;">🔬</span>
         <span class="shape" style="left: 50%; top: 50%; --translate-x: 800px; --translate-y: 1000px; --rotation: 360deg; --delay: 8s;">📡</span>
         <span class="shape" style="left: 60%; top: 60%; --translate-x: -1000px; --translate-y: 700px; --rotation: -720deg; --delay: 10s;">📊</span>
-        </div>
-    <div class="container">
-        <div class="game-box">
-            <h2>AI Wordle</h2>
-            <p>Guess AI-related terms and learn about key concepts in this engaging word puzzle game.</p>
-            <a href="wordle/index.html" class="play-button">Play</a>
-        </div>
-        <div class="game-box">
-            <h2>Python Blocks</h2>
-            <p>Drag, drop, and decode in this Python programming puzzle, where you'll piece together code blocks to solve challenges.</p>
-            <a href="python-blocks/index.html" class="play-button">Play</a>
-        </div>
-        <div class="game-box">
-            <h2>Flappy Loss Curve</h2>
-            <p>Guide the AI bird through obstacles along the loss curve to achieve the highest score!</p>
-            <a href="flappy/index.html" class="play-button">Play</a>
-        </div>
-        <div class="game-box">
-            <h2>Saddle Point Simulation</h2>
-            <p>An interactive 3D visualization demonstrating saddle points and local minima in optimization landscapes.</p>
-            <a href="marble/index.html" class="play-button">Play</a>
-        </div>
-        <div class="game-box">
-            <h2>Sliding Tiles</h2>
-            <p>A sliding puzzle where players rearrange scrambled image tiles to recreate the original picture</p>
-            <a href="sliding/index.html" class="play-button">Play</a>
-        </div>
-        <div class="game-box">
-            <h2>Color Cascade</h2>
-            <p>Flood the grid with color in this addictive puzzle game where strategy meets simplicity.</p>
-            <a href="color/index.html" class="play-button">Play</a>
-        </div>
-        <div class="game-box">
-            <h2>DVD Gravity Game</h2>
-            <p>Guide a colorful DVD logo through a cosmic dance of bounces and gravity wells, scoring points as it kisses the corners of your screen.</p>
-            <a href="dvd/index.html" class="play-button">Play</a>
-        </div>
-        <div class="game-box">
-            <h2>Cosmic Simulation</h2>
-            <p>Explore a dynamic cosmic simulation where particle densities shape a vibrant, evolving universe.</p>
-            <a href="particle/index.html" class="play-button">Play</a>
+    </div>
+    <div class="outer-wrapper">
+        <div class="container">
+            <div class="game-box">
+                <h2>AI Wordle</h2>
+                <p>Guess AI-related terms and learn about key concepts in this engaging word puzzle game.</p>
+                <a href="wordle/index.html" class="play-button">Play</a>
+            </div>
+            <div class="game-box">
+                <h2>Python Blocks</h2>
+                <p>Drag, drop, and decode in this Python programming puzzle, where you'll piece together code blocks to solve challenges.</p>
+                <a href="python-blocks/index.html" class="play-button">Play</a>
+            </div>
+            <div class="game-box">
+                <h2>Flappy Loss</h2>
+                <p>Guide the AI bird through obstacles along the loss curve to achieve the highest score!</p>
+                <a href="flappy/index.html" class="play-button">Play</a>
+            </div>
+            <div class="game-box">
+                <h2>Saddle Point</h2>
+                <p>An interactive 3D visualization demonstrating saddle points and local minima in optimization landscapes.</p>
+                <a href="marble/index.html" class="play-button">Play</a>
+            </div>
+            <div class="game-box">
+                <h2>Sliding Tiles</h2>
+                <p>A sliding puzzle where players rearrange scrambled image tiles to recreate the original picture</p>
+                <a href="sliding/index.html" class="play-button">Play</a>
+            </div>
+            <div class="game-box">
+                <h2>Color Cascade</h2>
+                <p>Flood the grid with color in this addictive puzzle game where strategy meets simplicity.</p>
+                <a href="color/index.html" class="play-button">Play</a>
+            </div>
+            <div class="game-box">
+                <h2>DVD Gravity</h2>
+                <p>Guide a colorful DVD logo through a cosmic dance of bounces and gravity wells, scoring points as it kisses the corners of your screen.</p>
+                <a href="dvd/index.html" class="play-button">Play</a>
+            </div>
+            <div class="game-box">
+                <h2>Cosmic Sim</h2>
+                <p>Explore a dynamic cosmic simulation where particle densities shape a vibrant, evolving universe.</p>
+                <a href="particle/index.html" class="play-button">Play</a>
+            </div>
         </div>
     </div>
 </body>
