--- a/neon/index.html
+++ b/neon/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neural Network Visualization</title>
+    <title>Neural Network Visualizations</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="game-container">
         <h1>Neural Network Neon</h1>
+        <div class="network-selector">
+            <label for="network-type">Select Network Type:</label>
+            <select id="network-type">
+                <option value="cloud">Cloud Network</option>
+                <option value="feedforward">Feedforward Network</option>
+                <option value="transformer">Transformer Decoder</option>
+            </select>
+        </div>
         <div id="game-board">
             <svg id="connections"></svg>
         </div>
@@ -19,8 +27,15 @@
     </div>
     <div class="instructions">
         <h2>How to Play</h2>
-        <p>Manual Mode: Click on neurons to activate them and watch as the activation spreads through the network!</p>
-        <p>Automatic Mode: Watch as neurons randomly activate at varying intervals, creating dynamic patterns across the network.</p>
+        <div id="cloud-instructions">
+            <p>Cloud Network: Click on neurons to activate them and watch as the activation spreads randomly through the network!</p>
+        </div>
+        <div id="feedforward-instructions" style="display: none;">
+            <p>Feedforward Network: Click on input neurons (left) and watch as the activation propagates through hidden layers to the output (right).</p>
+        </div>
+        <div id="transformer-instructions" style="display: none;">
+            <p>Transformer Decoder: Observe how activations flow through self-attention layers and feedforward networks in a GPT-like architecture.</p>
+        </div>
         <p>Use the toggle button to switch between manual and automatic modes.</p>
     </div>
     <script src="script.js"></script>
