--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                 <p>Explore a dynamic cosmic simulation where particle densities shape a vibrant, evolving universe.</p>
                 <a href="particle/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Neon</h2>
+                <p>Visualize and interact with different neural network architectures as you watch activations propagate through their intricate layers.</p>
+                <a href="neon/index.html" class="play-button">Play</a>
+            </div>
         </div>
     </div>
 </body>
