--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="main-styles.css"> <!-- Link to external CSS -->
 </head>
 <body>
+    <header style="width: 100%; text-align: center; padding: 20px 0; position: absolute; top: 0; left: 0; z-index: 1000; background: linear-gradient(45deg, #ff00ff, #00ffff); box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
+        <h1 style="margin: 0; font-size: 2.5em; color: #ffffff; text-shadow: 2px 2px 4px rgba(0,0,0,0.5); font-family: 'Arial', sans-serif; letter-spacing: 2px; text-transform: uppercase;">AI Generated Apps</h1>
+    </header>
     <div class="floating-shapes">
         <span class="shape" style="left: 10%; top: 10%; --translate-x: 1000px; --translate-y: 700px; --rotation: 720deg; --delay: 0s;">🤖</span>
         <span class="shape" style="left: 20%; top: 20%; --translate-x: -800px; --translate-y: 500px; --rotation: -360deg; --delay: 2s;">🧠</span>
@@ -15,7 +18,7 @@
         <span class="shape" style="left: 50%; top: 50%; --translate-x: 800px; --translate-y: 1000px; --rotation: 360deg; --delay: 8s;">📡</span>
         <span class="shape" style="left: 60%; top: 60%; --translate-x: -1000px; --translate-y: 700px; --rotation: -720deg; --delay: 10s;">📊</span>
     </div>
-    <div class="outer-wrapper">
+    <div class="outer-wrapper" style="padding-top: 100px;">
         <div class="container">
             <div class="game-box">
                 <h2>AI Wordle</h2>
