--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
                 <p>A news reader that aggregates and displays the latest news articles from selected RSS feeds.</p>
                 <a href="rss/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Automata</h2>
+                <p>An interactive cellular automaton simulation where you can create and observe evolving patterns on a dynamic grid.</p>
+                <a href="automata/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
