--- a/map/index.html
+++ b/map/index.html
@@ -11,8 +11,8 @@
     <div id="map"></div>
     <div id="info"></div>
     <div id="controls">
-        <button id="simulateBtn">Simulate</button>
         <span id="yearDisplay"></span>
+        <input type="range" id="yearSlider" min="1960" max="2023" value="2023">
     </div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="data.js"></script>
