--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
             </div>
             <div class="game-box">
                 <h2>Jokes</h2>
-                <p>A simple web app that displays a new joke every time you visit</p>
+                <p>A simple web app that displays a new joke every time you visit.</p>
                 <a href="jokes/index.html" class="play-button">Play</a>
+            </div>
+            <div class="game-box">
+                <h2>Fractals</h2>
+                <p>Explore mesmerizing fractal patterns with this interactive app, featuring the Mandelbrot set, Julia set, and Sierpinski triangle.</p>
+                <a href="fractal/index.html" class="play-button">Play</a>
             </div>
 </div>
     </div>
