--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
                 <p>Explore mesmerizing fractal patterns with this interactive app, featuring the Mandelbrot set, Julia set, and Sierpinski triangle.</p>
                 <a href="fractal/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Slither</h2>
+                <p>Slither through a vibrant world, grow your snake, and outmaneuver opponents in this multiplayer game.</p>
+                <a href="slither/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
