--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Generated Apps</title>
+    <title>Built with AI Gallery</title>
     <link rel="stylesheet" href="main-styles.css"> <!-- Link to external CSS -->
 </head>
 <body>
     <header style="width: 100%; text-align: center; padding: 20px 0; position: absolute; top: 0; left: 0; z-index: 1000; background: linear-gradient(45deg, #ff00ff, #00ffff); box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
-        <h1 style="margin: 0; font-size: 2.5em; color: #ffffff; text-shadow: 2px 2px 4px rgba(0,0,0,0.5); font-family: 'Arial', sans-serif; letter-spacing: 2px; text-transform: uppercase;">AI Generated Apps</h1>
+        <h1 style="margin: 0; font-size: 2.5em; color: #ffffff; text-shadow: 2px 2px 4px rgba(0,0,0,0.5); font-family: 'Arial', sans-serif; letter-spacing: 2px; text-transform: uppercase;">Built with AI Gallery</h1>
     </header>
     <div class="floating-shapes">
         <span class="shape" style="left: 10%; top: 10%; --translate-x: 1000px; --translate-y: 700px; --rotation: 720deg; --delay: 0s;">🤖</span>
